--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,5 +1,5 @@
 ---
-title: Mental models for designers PART 2
+title: Alieff models for designers PART 2
 description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
 date: Noyabr 17 2024
 ---
